[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcw"
version = "0.1.0"
description = "DefLink Crypto Wallet - Self-hosted CLI/TUI manager"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "web3>=6.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
dcw = "crypto_cli.cli:app"
