[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dcw"
version = "0.1.0"
description = "DefLink Crypto Wallet - Self-hosted CLI manager for ETH & TRX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "web3>=6.0.0",
    "tronpy>=0.4.0",
    "coincurve>=20.0.0",
    "cryptography>=41.0.0",
    "requests>=2.28.0",
]

[project.scripts]
dcw = "crypto_cli.cli:app"

[project.urls]
Homepage = "https://github.com/ТВОЙ_НИК/Deflink_Crypto_Wallet"
Issues = "https://github.com/ТВОЙ_НИК/Deflink_Crypto_Wallet/issues"
